--- a/TiendaFrontInventario/Layout/NavMenu.razor
+++ b/TiendaFrontInventario/Layout/NavMenu.razor
@@ -44,6 +44,16 @@
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Facturacion
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="Orders">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Orders
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="OrdersDetails">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> OrdersDetails
+            </NavLink>
+        </div>
 
     </nav>
 </div>
