--- a/TiendaFrontInventario/Layout/NavMenu.razor
+++ b/TiendaFrontInventario/Layout/NavMenu.razor
@@ -15,16 +15,6 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Counter
-            </NavLink>
-        </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="weather">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Weather
-            </NavLink>
-        </div>
-        <div class="nav-item px-3">
             <NavLink class="nav-link" href="Suppliers">
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Proveedores
             </NavLink>
@@ -52,6 +42,11 @@
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="OrdersDetails">
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> OrdersDetails
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="News">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> News
             </NavLink>
         </div>
 
